--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,13 @@ Encoding: UTF-8
 LazyData: true
 ByteCompile: true
 RoxygenNote: 6.1.0
+Imports:
+  crayon,
+  dplyr,
+  glue,
+  jsonlite,
+  processx,
+  purrr,
+  readr,
+  stringr,
+  utils
