--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(create_docker_config)
 export(create_singularity_config)
 export(get_default_config)
 export(pull_container)
+export(read_file)
 export(set_default_config)
 export(test_docker_installation)
 import(dplyr)
