export more functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,9 @@ export(create_singularity_config)
 export(get_default_config)
 export(pull_container)
 export(read_file)
+export(run)
 export(set_default_config)
+export(singularity_image_path)
 export(test_docker_installation)
 import(dplyr)
 import(purrr)
