--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,11 @@ export(create_config)
 export(create_docker_config)
 export(create_singularity_config)
 export(get_default_config)
+export(get_label)
 export(pull_container)
 export(read_file)
 export(run)
 export(set_default_config)
-export(singularity_image_path)
 export(test_docker_installation)
 import(dplyr)
 import(purrr)
@@ -18,6 +18,7 @@ importFrom(crayon,bold)
 importFrom(crayon,green)
 importFrom(crayon,red)
 importFrom(glue,glue)
+importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,write_json)
 importFrom(processx,run)
 importFrom(readr,read_lines)
