--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ import(purrr)
 importFrom(crayon,bold)
 importFrom(crayon,green)
 importFrom(crayon,red)
+importFrom(dynutils,safe_tempdir)
 importFrom(glue,glue)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,write_json)
