add test singularity function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(read_file)
 export(run)
 export(set_default_config)
 export(test_docker_installation)
+export(test_singularity_installation)
 import(dplyr)
 import(purrr)
 importFrom(crayon,bold)
