--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(create_docker_config)
 export(create_singularity_config)
 export(get_default_config)
 export(get_label)
+export(list_docker_images)
 export(pull_container)
 export(read_file)
 export(run)
@@ -23,8 +24,10 @@ importFrom(glue,glue)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,write_json)
 importFrom(processx,run)
+importFrom(readr,cols)
 importFrom(readr,read_lines)
 importFrom(readr,read_rds)
+importFrom(readr,read_tsv)
 importFrom(readr,write_lines)
 importFrom(readr,write_rds)
 importFrom(stringr,str_pad)
