add import for write_lines

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(readr,cols)
 importFrom(readr,read_lines)
 importFrom(readr,read_rds)
 importFrom(readr,read_tsv)
+importFrom(readr,write_lines)
 importFrom(readr,write_rds)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_replace)
