switch to devel

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,8 +32,8 @@ Imports:
   readr,
   stringr,
   utils
-Remotes:
-  dynverse/dynutils
+Remotes: 
+    dynverse/dynutils@devel
 SystemRequirements: Docker and/or Singularity (>=3.0)
 Encoding: UTF-8
 LazyData: true
