--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: babelwhale
-Version: 1.0.0
+Version: 1.0.0.9000
 Title: Talking to Docker and Singularity Containers
 Description: Provides a unified interface where possible to interact with docker and singularity containers.
    You can execute a command inside a container, mount a volume or copy a file.
@@ -33,6 +33,8 @@ Imports:
   readr,
   stringr,
   utils
+Remotes: 
+  dynverse/dynutils@devel
 SystemRequirements: Docker and/or Singularity (>=3.0)
 Encoding: UTF-8
 LazyData: true
