--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: babelwhale
 Version: 1.0.0
 Title: Talking to Docker and Singularity Containers
-Description: Provides a unified interface where possible to interact with docker and singularity containers.
+Description: Provides a unified interface to interact with docker and singularity containers.
    You can execute a command inside a container, mount a volume or copy a file.
 Authors@R: c(
     person(
