--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,8 @@ Authors@R: c(
       comment = c(ORCID = "0000-0002-7114-6248", github = "zouter")
     )
   )
+URL: https://github.com/dynverse/babelwhale
+BugReports: https://github.com/dynverse/babelwhale/issues
 License: GPL-3
 Depends:
   R (>= 3.0.0)
