--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,5 @@ importFrom(crayon,green)
 importFrom(crayon,red)
 importFrom(dynutils,safe_tempdir)
 importFrom(processx,run)
+importFrom(utils,read.delim)
 importFrom(utils,tail)
