switch to master

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: babelwhale
-Version: 1.0.0.9000
+Version: 1.0.0
 Title: Talking to 'Docker' and 'Singularity' Containers
 Description: Provides a unified interface to interact with 'docker' and 'singularity' containers.
    You can execute a command inside a container, mount a volume or copy a file.
@@ -31,8 +31,8 @@ Imports:
   processx,
   purrr,
   utils
-Remotes:
-  dynverse/dynutils@devel
+Remotes: 
+    dynverse/dynutils@master
 SystemRequirements: Docker and/or Singularity (>=3.0)
 Encoding: UTF-8
 LazyData: true
