--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
 language: r
-dist: trusty
-os:
-  - linux
-  - osx
-warnings_are_errors: true
 cache: packages
+matrix:
+  include:
+  - r: oldrel
+    os: linux
+  - r: release
+    os: linux
+  - r: devel
+    os: linux
+  - r: release
+    os: osx
+r_packages: covr
 services: docker
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install libgit2; fi
-install:
- - R -e 'if ("devtools" %in% rownames(installed.packages())) update.packages(oldPkgs = "devtools", ask = FALSE) else install.packages("devtools")'
- - R -e 'devtools::install_cran("covr")'
- - R -e 'devtools::install(dependencies = TRUE, upgrade = TRUE)'
 after_success:
  - R -e 'covr::codecov()'
