--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -103,7 +103,7 @@ jobs:
 
       - name: Check
         env:
-          GA_OS: {{ runner.os }}
+          GA_OS: ${{ runner.os }}
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
         run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
         shell: Rscript {0}
