--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: babelwhale
 Title: Talking to 'Docker' and 'Singularity' Containers
-Version: 1.0.2
+Version: 1.0.3
 Authors@R: 
     c(person(given = "Robrecht",
              family = "Cannoodt",
@@ -21,15 +21,15 @@ BugReports: https://github.com/dynverse/babelwhale/issues
 Depends:
     R (>= 3.0.0)
 Imports:
-  crayon,
-  dplyr,
-  dynutils,
-  processx (>= 3.5.0),
-  purrr,
-  utils
+    crayon,
+    dplyr,
+    dynutils,
+    processx (>= 3.5.0),
+    purrr,
+    utils
+Suggests: 
+    testthat (>= 3.0.0)
 SystemRequirements: Docker and/or Singularity (>=3.0)
 Encoding: UTF-8
-LazyData: true
-ByteCompile: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
