--- a/.github/workflows/test_coverage.yml
+++ b/.github/workflows/test_coverage.yml
@@ -19,13 +19,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: Set up Go 1.12
         uses: actions/setup-go@v1
         with:
           go-version: 1.12
         id: go
-        
+
       - name: Install Singularity Dependencies
         run: |
           sudo apt-get update && sudo apt-get install -y \
@@ -46,7 +46,7 @@ jobs:
           sudo mkdir -p /usr/local/var/singularity/mnt && \
           mkdir -p $GOPATH/src/github.com/sylabs && \
           cd $GOPATH/src/github.com/sylabs && \
-          wget -qO- https://github.com/sylabs/singularity/releases/download/v${SINGULARITY_VERSION}/singularity-${SINGULARITY_VERSION}.tar.gz | \
+          wget -qO- https://github.com/sylabs/singularity/archive/refs/tags/v${SINGULARITY_VERSION}.tar.gz | \
           tar xzv && \
           cd singularity && \
           ./mconfig -p /usr/local && \
