--- a/.github/workflows/test_coverage.yml
+++ b/.github/workflows/test_coverage.yml
@@ -20,38 +20,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Go 1.12
-        uses: actions/setup-go@v1
+      - uses: eWaterCycle/setup-singularity@v6
         with:
-          go-version: 1.12
-        id: go
-
-      - name: Install Singularity Dependencies
-        run: |
-          sudo apt-get update && sudo apt-get install -y \
-            build-essential \
-            libssl-dev \
-            uuid-dev \
-            libgpgme11-dev \
-            squashfs-tools \
-            libseccomp-dev \
-            pkg-config
-
-      - name: Install Singularity
-        env:
-          SINGULARITY_VERSION: 3.2.1
-        run: |
-          export GOPATH=/tmp/go
-          mkdir -p $GOPATH
-          sudo mkdir -p /usr/local/var/singularity/mnt && \
-          mkdir -p $GOPATH/src/github.com/sylabs && \
-          cd $GOPATH/src/github.com/sylabs && \
-          wget -qO- https://github.com/sylabs/singularity/archive/refs/tags/v${SINGULARITY_VERSION}.tar.gz | \
-          tar xzv && \
-          cd singularity && \
-          ./mconfig -p /usr/local && \
-          make -C builddir && \
-          sudo make -C builddir install
+          singularity-version: 3.5.3
 
       - uses: r-lib/actions/setup-r@v1
         with:
