--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(list_docker_images)
 export(pull_container)
 export(read_file)
 export(run)
+export(run_auto_mount)
 export(set_default_config)
 export(test_docker_installation)
 export(test_singularity_installation)
