--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,14 +23,17 @@ Depends:
 Imports:
     crayon,
     dplyr,
+    fs,
     dynutils,
     processx (>= 3.5.0),
     purrr,
-    utils
+    utils,
+    digest,
+    glue
 Suggests: 
     covr,
     testthat (>= 3.0.0)
 SystemRequirements: Docker and/or Singularity (>=3.0)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
